--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.9.1
+astroid==3.3.11
+cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 chardet==3.0.4
 charset-normalizer==3.4.3
+colorama==0.4.6
 cryptography==45.0.7
 deepl==1.22.0
+dill==0.4.0
 dj-rest-auth==7.0.1
 Django==5.2.6
 django-allauth==65.11.2
@@ -32,18 +36,28 @@ httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
+isort==6.0.1
+mccabe==0.7.0
 packaging==25.0
+platformdirs==4.4.0
 proto-plus==1.26.1
 protobuf==6.31.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 PyJWT==2.10.1
+pylint==3.3.8
+pylint-django==2.6.1
+pylint-plugin-utils==0.9.0
 python-decouple==3.8
 requests==2.32.5
 rfc3986==1.5.0
 rsa==4.9.1
 setuptools==78.1.1
+sniffio==1.3.1
 sqlparse==0.5.3
+tomlkit==0.13.3
 types-PyYAML==6.0.12.20250822
 types-requests==2.32.4.20250913
 typing_extensions==4.15.0
